doc/docs/versions/2.3.x/source/json.md
# Источник данных Json

Класс: **Sholokhov\Exchange\Source\Json**

## Введение
Источник данных предназначен, для преобразования данных из JSON в массив и передачу механизму обмена.  
Хранение всех данных источника производится в памяти устройства. Перед использованием данного источника стоит учитывать возможные размера данных и ресурсы сервера.

## Конфигурация
Предоставляется возможность указать корневую точку необходимых данных, для этого необходимо при инициализации указать необходимый путь.
Если путь имеет вложенность, то уровни разделяются символом "."  
Рассмотрим пример получения данных из json  

При инициализации объекта в конструктор мы обязаны указать способ `Reader`.   
В качестве `Reader` может выступать любой реализующий интерфейс [DataReaderInterface](/2.3.x/reader/).

Вторым параметром указываются опциональные настройки.


| Название   | Тип данных | Значение по умолчанию | Описание                                                   |
|------------|------------|-----------------------|------------------------------------------------------------|
| source_key | string     |                       | Путь до размещения данных                                  |
| multiple   | boolean    | false                 | Значение является итерируемым и его необходимо "перебрать" |

**Формат данных**
```json
{
    "items": {
        "item": [
            {
                "id": 15,
                "name": "Тут название",
                "color": {
                    "id": 33,
                    "name": "Черный"
                }
            },
            {
                "name": "Тут название2",
                "color": {
                    "id": 12,
                    "name": "Белый"
                }
            }
        ]
    }
}
```

**Создание источника**
```php
use Sholokhov\Exchange\Source\Json;
use Sholokhov\Exchange\Reader\LocalFileReader;

$reader = new LocalFileReader('https:\\my-web.com');

$config = [
    'source_key' => 'items.item',
    'multiple' => true
];
$source = new Source\Json($reader, $config);
foreach($source as $value) {
    echo "<pre>";
    var_dump($value);
    echo "</pre>";
}
```

Результат
```php
array(3) {
  ["id"]=>
  int(15)
  ["name"]=>
  string(23) "Тут название"
  ["color"]=>
  array(2) {
    ["id"]=>
    int(33)
    ["name"]=>
    string(12) "Черный"
  }
}

array(2) {
  ["name"]=>
  string(24) "Тут название2"
  ["color"]=>
  array(2) {
    ["id"]=>
    int(12)
    ["name"]=>
    string(10) "Белый"
  }
}
```